--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,20 @@
-# Compiled class file
-*.class
+#Eclipse
+.classpath
+.project
+/bin/
+/.settings/
 
-# Log file
-*.log
+#IntelliJ
+*.iml
+*.ipr
+*.iws
+.idea/
+/out/
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+#gradle
+gradle/
+gradlew
+gradlew.bat
+/.gradle/
+/build/
+.gradle
