--- a/db-client/pom.xml
+++ b/db-client/pom.xml
@@ -2,45 +2,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>akka-practice</artifactId>
+        <groupId>org.lili.akka</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.lili.akka</groupId>
-    <artifactId>akka-practice</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>db-client</module>
-        <module>common</module>
-    </modules>
+    <artifactId>db-client</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <akka.untyped.version>2.5.32</akka.untyped.version>
-        <akka.typed.version>2.6.14</akka.typed.version>
     </properties>
 
     <dependencies>
-        <!-- typed -->
-        <!-- <dependency>
-             <groupId>com.typesafe.akka</groupId>
-             <artifactId>akka-actor-typed_2.13</artifactId>
-             <version>${akka.typed.version}</version>
-         </dependency>
-
-
-         <dependency>
-             <groupId>com.typesafe.akka</groupId>
-             <artifactId>akka-actor-testkit-typed_2.13</artifactId>
-             <version>${akka.typed.version}</version>
-             <scope>test</scope>
-         </dependency>-->
 
         <dependency>
             <groupId>org.lili.akka</groupId>
             <artifactId>common</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
+
 
         <!--classic -->
         <dependency>
@@ -97,6 +79,11 @@
             <artifactId>junit</artifactId>
             <version>4.13.2</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.lili.akka</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
 
