--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,8 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>db-client</module>
-        <module>common</module>
         <module>akka-in-action-java</module>
+        <module>learning-akka</module>
     </modules>
 
     <properties>
@@ -37,12 +36,6 @@
              <scope>test</scope>
          </dependency>-->
 
-
-        <dependency>
-            <groupId>org.lili.akka</groupId>
-            <artifactId>common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
 
         <!--classic -->
         <dependency>
@@ -90,7 +83,7 @@
         <dependency>
             <groupId>com.typesafe</groupId>
             <artifactId>config</artifactId>
-            <version>1.4.1</version>
+            <version>1.4.2</version>
         </dependency>
 
 
@@ -101,7 +94,6 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
-
 
 
         <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-cluster -->
@@ -119,7 +111,22 @@
         </dependency>
 
 
-
     </dependencies>
+
+    <build>
+        <finalName>akka-practice</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
