--- a/akka-classic/src/main/resources/SimpleClusterListener.conf
+++ b/akka-classic/src/main/resources/SimpleClusterListener.conf
@@ -2,6 +2,8 @@ akka {
   actor {
     provider = "cluster"
   }
+  loglevel = "INFO"
+
   remote.artery {
     canonical {
       hostname = "127.0.0.1"
