--- a/learning-akka/pom.xml
+++ b/learning-akka/pom.xml
@@ -32,27 +32,27 @@
 
         <dependency>
             <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-http_${scala.version}</artifactId>
+            <artifactId>akka-http_${scala.binary.version}</artifactId>
             <version>10.2.4</version>
         </dependency>
 
 
         <dependency>
             <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-actor_${scala.version}</artifactId>
+            <artifactId>akka-actor_${scala.binary.version}</artifactId>
             <version>${akka.version}</version>
         </dependency>
 
 
         <dependency>
             <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-remote_${scala.version}</artifactId>
+            <artifactId>akka-remote_${scala.binary.version}</artifactId>
             <version>${akka.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-multi-node-testkit_${scala.version}</artifactId>
+            <artifactId>akka-multi-node-testkit_${scala.binary.version}</artifactId>
             <version>${akka.version}</version>
             <scope>test</scope>
         </dependency>
@@ -72,7 +72,7 @@
 
         <dependency>
             <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-cluster-sharding_${scala.version}</artifactId>
+            <artifactId>akka-cluster-sharding_${scala.binary.version}</artifactId>
             <version>${akka.version}</version>
         </dependency>
 
@@ -94,14 +94,14 @@
 
         <dependency>
             <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-cluster_${scala.version}</artifactId>
+            <artifactId>akka-cluster_${scala.binary.version}</artifactId>
             <version>${akka.version}</version>
         </dependency>
 
 
         <dependency>
             <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-distributed-data_${scala.version}</artifactId>
+            <artifactId>akka-distributed-data_${scala.binary.version}</artifactId>
             <version>${akka.version}</version>
         </dependency>
 
