--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,13 @@
         <module>akka-in-action-java</module>
         <module>learning-akka</module>
         <module>akka-classic</module>
+        <module>akka-in-action-classic</module>
     </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <scala.version>2.13</scala.version>
+        <scala.binary.version>2.13</scala.binary.version>
         <akka.version>2.6.14</akka.version>
     </properties>
 
@@ -42,27 +43,27 @@
             <!--classic -->
             <dependency>
                 <groupId>com.typesafe.akka</groupId>
-                <artifactId>akka-http_${scala.version}</artifactId>
+                <artifactId>akka-http_${scala.binary.version}</artifactId>
                 <version>10.2.4</version>
             </dependency>
 
 
             <dependency>
                 <groupId>com.typesafe.akka</groupId>
-                <artifactId>akka-actor_${scala.version}</artifactId>
+                <artifactId>akka-actor_${scala.binary.version}</artifactId>
                 <version>${akka.version}</version>
             </dependency>
 
 
             <dependency>
                 <groupId>com.typesafe.akka</groupId>
-                <artifactId>akka-remote_${scala.version}</artifactId>
+                <artifactId>akka-remote_${scala.binary.version}</artifactId>
                 <version>${akka.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.typesafe.akka</groupId>
-                <artifactId>akka-multi-node-testkit_${scala.version}</artifactId>
+                <artifactId>akka-multi-node-testkit_${scala.binary.version}</artifactId>
                 <version>${akka.version}</version>
                 <scope>test</scope>
             </dependency>
@@ -77,7 +78,7 @@
 
             <dependency>
                 <groupId>com.typesafe.akka</groupId>
-                <artifactId>akka-cluster-sharding_${scala.version}</artifactId>
+                <artifactId>akka-cluster-sharding_${scala.binary.version}</artifactId>
                 <version>${akka.version}</version>
             </dependency>
 
@@ -93,39 +94,38 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>4.13.2</version>
-                <scope>test</scope>
             </dependency>
 
 
             <dependency>
                 <groupId>com.typesafe.akka</groupId>
-                <artifactId>akka-cluster_${scala.version}</artifactId>
+                <artifactId>akka-cluster_${scala.binary.version}</artifactId>
                 <version>${akka.version}</version>
             </dependency>
 
 
             <dependency>
                 <groupId>com.typesafe.akka</groupId>
-                <artifactId>akka-cluster-tools_${scala.version}</artifactId>
+                <artifactId>akka-cluster-tools_${scala.binary.version}</artifactId>
                 <version>${akka.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.typesafe.akka</groupId>
-                <artifactId>akka-cluster-sharding_${scala.version}</artifactId>
+                <artifactId>akka-cluster-sharding_${scala.binary.version}</artifactId>
                 <version>${akka.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.typesafe.akka</groupId>
-                <artifactId>akka-cluster-metrics_${scala.version}</artifactId>
+                <artifactId>akka-cluster-metrics_${scala.binary.version}</artifactId>
                 <version>${akka.version}</version>
             </dependency>
 
 
             <dependency>
                 <groupId>com.typesafe.akka</groupId>
-                <artifactId>akka-distributed-data_${scala.version}</artifactId>
+                <artifactId>akka-distributed-data_${scala.binary.version}</artifactId>
                 <version>${akka.version}</version>
             </dependency>
 
