add sharding demo

--- a/akka-classic/src/main/resources/PubSub.conf
+++ b/akka-classic/src/main/resources/PubSub.conf
@@ -12,6 +12,13 @@ akka {
   }
 
   cluster {
+
+    pub-sub {
+      name = distributedPubSubMediator
+
+      use-dispatcher = "akka.actor.internal-dispatcher"
+    }
+
     seed-nodes = [
       "akka://ClusterSystem@127.0.0.1:2551",
       "akka://ClusterSystem@127.0.0.1:2552"]
