--- a/akka-in-action-classic/pom.xml
+++ b/akka-in-action-classic/pom.xml
@@ -81,6 +81,21 @@
             <artifactId>netty</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.iq80.leveldb</groupId>
+            <artifactId>leveldb</artifactId>
+            <version>0.12</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.fusesource.leveldbjni</groupId>
+            <artifactId>leveldbjni-all</artifactId>
+            <version>1.8</version>
+        </dependency>
+
+
+
 
     </dependencies>
 
