add device for sharding demo

--- a/akka-classic-cluster-sample/src/main/resources/cart.conf
+++ b/akka-classic-cluster-sample/src/main/resources/cart.conf
@@ -19,8 +19,8 @@ akka {
   akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
   akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
 
-  akka.persistence.journal.leveldb.dir = "target/example/journal"
-  akka.persistence.snapshot-store.local.dir = "target/example/snapshots"
+  akka.persistence.journal.leveldb.dir = "akka-classic-cluster-sample/target/example/journal"
+  akka.persistence.snapshot-store.local.dir = "akka-classic-cluster-sample/target/example/snapshots"
 
   akka.persistence.journal.leveldb.native = false
 }
